# rust-sike

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: sike-bench.rs
examples/: kem434.rs  kem503.rs  kem610.rs  kem751.rs  pke434.rs  pke503.rs  pke610.rs  pke751.rs
src/: lib.rs
src/constants/: cs_p503.rs  cs_p610.rs  cs_p751.rs  mod.rs
src/ff/: ff_17.rs  ff_p434.rs  ff_p503.rs  ff_p610.rs  ff_p751.rs  mod.rs
src/isogeny/: curve.rs  mod.rs  point.rs  publickey.rs  publicparams.rs  secretkey.rs
src/kem/: mod.rs
src/pke/: mod.rs
src/utils/: constants.rs  conversion.rs  mod.rs  shake.rs  strategy.rs
