[package]
name = "rust-sike"
version = "0.1.0"
authors =  ["Rémi Géraud-Stewart <remi.geraud@ens.fr>", "Edmond de Roffignac <edmond.de-roffignac@student.ecp.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-keccak = {version="2.0", features=["shake"]}
rand="0.7"
once_cell="1.2"
bitvec="0.15"
criterion = "0.3"
rug = {version="1.6", features = ["integer"]}
hex="0.4"

[profile.release]

lto = true

[[bench]]
name = "sike-bench"
harness = false