[package]
name = "rust-sike"
version = "0.1.1"
authors =  ["Rémi Géraud-Stewart <remi.geraud@ens.fr>", "Edmond de Roffignac <edmond.de-roffignac@student.ecp.fr>"]
edition = "2018"
description = "Implementation of the key encapsulation mechanism (KEM) and public-key encryption (pke) schemes of the Supersingular Isogeny Key Encapsulation (SIKE) protocol"
license = "MIT"
readme = "README.md"
keywords = ["crypto", "isogeny", "SIDH", "pke", "kem"]
categories = ["cryptography", "science"]
repository = "https://github.com/rust-crypto-labs/rust-sike"

[dependencies]
tiny-keccak = {version="2.0", features=["shake"]}
rand="0.7"
once_cell="1.2"
bitvec="0.15"
rug = {version="1.6", features = ["integer"], default-features = false}
hex="0.4"

[dev-dependencies]
criterion = "0.3"

[profile.release]
opt-level = 3
debug = false
lto = true

[[bench]]
name = "sike-bench"
harness = false
