[package]
name = "rust-sike"
version = "0.2.0"
authors =  ["Rémi Géraud-Stewart <remi.geraud@ens.fr>", "Edmond de Roffignac <edmond.de-roffignac@student.ecp.fr>"]
edition = "2018"
description = "Implementation of the key encapsulation mechanism (KEM) and public-key encryption (pke) schemes of the Supersingular Isogeny Key Encapsulation (SIKE) protocol"
license = "MIT"
readme = "README.md"
keywords = ["crypto", "isogeny", "SIDH", "pke", "kem"]
categories = ["cryptography", "science"]
repository = "https://github.com/rust-crypto-labs/rust-sike"

[dependencies]
bitvec = "0.17"
getrandom = "0.1"
hex = "0.4"
once_cell = "1.4"
rug = { version = "1.10", features = ["integer"], default-features = false }
sha3 = "0.9"

[dev-dependencies]
criterion = "0.3"
flamegraph = "0.4"

[profile.release]
opt-level = 3
debug = false
lto = true

[[bench]]
name = "sike-bench"
harness = false
